<resources>
  <string name="app_name">Story App</string>

  <string name="input_password">Input your password</string>
  <string name="input_email">Input your email</string>

  <string name="picture_logo">This StoryApp logo</string>

  <string name="invalid_email">Not a valid email</string>
  <string name="invalid_password">Password must be at least 8 characters long</string>

  <string name="sign_in">Sign In</string>
  <string name="register">Register</string>
  <string name="list_story">List Story</string>
  <string name="add_story">Add Story</string>
  <string name="logout">Log Out</string>

  <string name="sign_in_with_your_account">Sign In with your account</string>
  <string name="register_your_account">Register your account</string>
  <string name="did_t_have_account"><u>Did\'t have account?</u></string>
  <string name="have_account"><u>Have account?</u></string>

  <string name="input_name">Input your name</string>
  <string name="fill_all">Fill All The Field With Correctly</string>

  <string name="greeting">Hi %1$s,</string>
  <string name="created_add">Created at %1$s</string>
  <string name="dicoding_course">Dicoding 2025</string>
  <string name="home_description">Post and share your story, share your activities, and get to know other people\'s stories</string>
  <string name="login_account">Login your account</string>
  <string name="continue_">Continue</string>
  <string name="sign_in_success">Sign In Success</string>
  <string name="register_success">Register Success, You can Sign In with your account</string>
  <string name="register_failed">Register Failed</string>
  <string name="upload_failed">Upload Failed</string>
  <string name="upload_success">Upload Success Swipe Up to Refresh</string>
  <string name="sign_in_failed">Sign In Failed</string>
  <string name="log_out_success">Log Out Success</string>
  <string name="warning">Warning</string>
  <string name="warning_log_out">Signing out will end your session. Are you sure you want to continue?</string>
  <string name="no">No</string>
  <string name="information">Information</string>

  <string name="camera">Camera</string>
  <string name="description">Description</string>
  <string name="invalid_capture">Failed to take pictures</string>
  <string name="failed_open_camera">Failed to open camera</string>
  <string name="gallery">Gallery</string>
  <string name="upload">Upload</string>
  <string name="change_language">Change language</string>
  <string name="new_story">New Story</string>
  <string name="image_preview">Image preview</string>

  <string name="image_story">Image story</string>
  <string name="name">Name</string>
  <string name="error_occurred">Some Error Occurred</string>
  <string name="post_story">Post story</string>
  <string name="enable_gps_permission">Please allowed your location services</string>
  <string name="invalid_permission">Can\'t get permission</string>
  <string name="no_attach_file">No file attached, please attach image first</string>
  <string name="invalid_description">Description must be filled</string>

  <string name="detail_story">Detail Story</string>
  <string name="switch_camera">Switch Camera</string>
  <string name="capture_image">Capture image</string>
  <string name="must_filled">Must be filled</string>

  <string name="retry">Retry</string>
  <string name="title_activity_maps">MapsActivity</string>
  <string name="something_wrong">Oops.. something went wrong.<br /> Check your connection</string>
  <string name="share_location">Share Location</string>

  <string name="no_stories_yet">No Stories Yet</string>
  <string name="open_the_app_to_load_your_stories">Open the app to load your stories</string>
  <string name="swipe_to_explore_stories">Swipe to explore stories</string>
</resources>