<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <ImageView
    android:id="@+id/iv_setting"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:src="@drawable/ic_setting"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/change_language" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineHorizontal3"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_percent="0.44"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/copyrightTextView"
    style="@style/TextViewRegular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:text="@string/dicoding_course"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    style="@style/TextViewBold"
    android:id="@+id/nameTextView"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="44dp"
    android:layout_marginEnd="32dp"
    android:lines="1"
    android:maxLines="1"
    tools:text="Hi you"
    android:textSize="34sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal3" />

  <Button
    android:id="@+id/btn_logOut"
    style="@style/BtnRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="32dp"
    android:backgroundTint="@color/red_200"
    android:text="@string/logout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_lis_story" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="150dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:contentDescription="@string/picture_logo"
    android:src="@drawable/ic_logo"
    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_lis_story"
    style="@style/BtnRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="32dp"
    android:text="@string/continue_"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/messageTextView" />

  <TextView
    android:id="@+id/messageTextView"
    style="@style/TextViewRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="32dp"
    android:text="@string/home_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nameTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>