<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/gray_light"
  tools:context=".ui.activity.ListStoryActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/list_story">

        <ImageView
          android:id="@+id/iv_add_story"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_gravity="end"
          android:layout_marginEnd="14dp"
          android:clickable="true"
          android:contentDescription="@string/post_story"
          android:focusable="true"
          android:src="@drawable/ic_capture" />

        <ImageView
          android:id="@+id/iv_show_map"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_gravity="end"
          android:layout_marginEnd="14dp"
          android:clickable="true"
          android:contentDescription="@string/post_story"
          android:focusable="true"
          android:src="@drawable/ic_show_map" />
      </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_story"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      tools:listitem="@layout/item_list_story" />
  </LinearLayout>

  <ProgressBar
    android:id="@+id/progress_bar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:visibility="gone"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tv_info"
    style="@style/TextViewBold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:text="@string/error_occurred"
    android:textSize="30sp" />

</RelativeLayout>